{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 76,
  "lineage": "196acc0b-026b-202a-58cb-514a41f0c898",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "private_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/zones/europe-north1-b/instanceGroups/private-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-06-17T22:25:35.107-07:00",
            "enable_cdn": false,
            "fingerprint": "XRXD7PDXh2Q=",
            "generated_id": 7562569780719035552,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/healthChecks/http-basic-check"
            ],
            "id": "projects/sukrit-singh-426716/global/backendServices/private-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "private-backend",
            "port_name": "http",
            "project": "sukrit-singh-426716",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/backendServices/private-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.http_health_check",
            "google_compute_instance.vm_private",
            "google_compute_instance_group.private_group",
            "google_compute_network.my_vpc",
            "google_compute_subnetwork.custom_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "public_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/zones/europe-north1-b/instanceGroups/public-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-06-17T22:25:35.787-07:00",
            "enable_cdn": false,
            "fingerprint": "sK8EldnjXK4=",
            "generated_id": 8495865216362128544,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/healthChecks/http-basic-check"
            ],
            "id": "projects/sukrit-singh-426716/global/backendServices/public-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "public-backend",
            "port_name": "http",
            "project": "sukrit-singh-426716",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/backendServices/public-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.http_health_check",
            "google_compute_instance.vm_create",
            "google_compute_instance_group.public_group",
            "google_compute_network.my_vpc",
            "google_compute_subnetwork.custom_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-19T06:58:32.509-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sukrit-singh-426716/global/firewalls/allow-http-tf",
            "log_config": [],
            "name": "allow-http-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/networks/sukrit-vpc",
            "priority": 1000,
            "project": "sukrit-singh-426716",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/firewalls/allow-http-tf",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "iap_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-17T11:50:50.846-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sukrit-singh-426716/global/firewalls/iap-firewall-rule33",
            "log_config": [],
            "name": "iap-firewall-rule33",
            "network": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/networks/sukrit-vpc",
            "priority": 1000,
            "project": "sukrit-singh-426716",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/firewalls/iap-firewall-rule33",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/sukrit-singh-426716/global/forwardingRules/http-forwarding-rule",
            "ip_address": "34.144.228.26",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-forwarding-rule",
            "port_range": "80-80",
            "project": "sukrit-singh-426716",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/forwardingRules/http-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/targetHttpProxies/http-lb-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.private_backend",
            "google_compute_backend_service.public_backend",
            "google_compute_health_check.http_health_check",
            "google_compute_instance.vm_create",
            "google_compute_instance.vm_private",
            "google_compute_instance_group.private_group",
            "google_compute_instance_group.public_group",
            "google_compute_network.my_vpc",
            "google_compute_subnetwork.custom_subnet",
            "google_compute_target_http_proxy.http_proxy",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_create",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240614",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/zones/europe-north1-b/disks/sukritpublic-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/sukrit-singh-426716/zones/europe-north1-b/instances/sukritpublic-vm",
            "instance_id": "6798147979503946660",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "KWUVXLJsGAc=",
            "metadata_startup_script": "#!/bin/bash\napt-get update\napt-get install -y apache2\necho 'Hello from Public Server' \u003e /var/www/html/index.html\nsystemctl restart apache2\nsystemctl enable ssh   # Ensure SSH daemon starts on boot\nsystemctl restart ssh  # Restart SSH daemon\n",
            "name": "sukritpublic-vm",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/networks/sukrit-vpc",
                "network_ip": "10.0.0.12",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/regions/europe-north1/subnetworks/custom-subnet",
                "subnetwork_project": "sukrit-singh-426716"
              }
            ],
            "project": "sukrit-singh-426716",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/zones/europe-north1-b/instances/sukritpublic-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-north1-b"
          },
          "dependencies": [
            "google_compute_network.my_vpc",
            "google_compute_subnetwork.custom_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240614",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/zones/europe-north1-b/disks/sukritprivate-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/sukrit-singh-426716/zones/europe-north1-b/instances/sukritprivate-vm",
            "instance_id": "7589127839843044259",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "xYWVam2cu88=",
            "metadata_startup_script": "#!/bin/bash\napt-get update\napt-get install -y apache2\necho 'Hello from private Server' \u003e /var/www/html/index.html\nsystemctl restart apache2\nsystemctl enable ssh   # Ensure SSH daemon starts on boot\nsystemctl restart ssh  # Restart SSH daemon\n",
            "name": "sukritprivate-vm",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/networks/sukrit-vpc",
                "network_ip": "10.0.0.13",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/regions/europe-north1/subnetworks/custom-subnet",
                "subnetwork_project": "sukrit-singh-426716"
              }
            ],
            "project": "sukrit-singh-426716",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/zones/europe-north1-b/instances/sukritprivate-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-north1-b"
          },
          "dependencies": [
            "google_compute_network.my_vpc",
            "google_compute_subnetwork.custom_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/sukrit-singh-426716/global/networks/sukrit-vpc",
            "mtu": 0,
            "name": "sukrit-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "22754623871597456",
            "project": "sukrit-singh-426716",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/networks/sukrit-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-18T00:23:16.276-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/sukrit-singh-426716/regions/europe-north1/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/networks/sukrit-vpc",
            "project": "sukrit-singh-426716",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/regions/europe-north1/routers/nat-router"
          },
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_config",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "sukrit-singh-426716/europe-north1/nat-router/nat-config",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-config",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "sukrit-singh-426716",
            "region": "europe-north1",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.my_vpc",
            "google_compute_router.nat_router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "custom_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-17T11:50:56.397-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/sukrit-singh-426716/regions/europe-north1/subnetworks/custom-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "custom-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/networks/sukrit-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sukrit-singh-426716",
            "purpose": "PRIVATE",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/regions/europe-north1/subnetworks/custom-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-17T22:26:38.298-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/sukrit-singh-426716/global/targetHttpProxies/http-lb-proxy",
            "name": "http-lb-proxy",
            "project": "sukrit-singh-426716",
            "proxy_bind": false,
            "proxy_id": 7294992850026800225,
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/targetHttpProxies/http-lb-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/urlMaps/url-map"
          },
          "dependencies": [
            "google_compute_backend_service.private_backend",
            "google_compute_backend_service.public_backend",
            "google_compute_health_check.http_health_check",
            "google_compute_instance.vm_create",
            "google_compute_instance.vm_private",
            "google_compute_instance_group.private_group",
            "google_compute_instance_group.public_group",
            "google_compute_network.my_vpc",
            "google_compute_subnetwork.custom_subnet",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-17T22:26:27.340-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/backendServices/private-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "4qulEGQmtcU=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "*"
                ],
                "path_matcher": "allpaths"
              }
            ],
            "id": "projects/sukrit-singh-426716/global/urlMaps/url-map",
            "map_id": 6568112700815877228,
            "name": "url-map",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/backendServices/private-backend",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "allpaths",
                "path_rule": [
                  {
                    "paths": [
                      "/public/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/backendServices/public-backend",
                    "url_redirect": []
                  },
                  {
                    "paths": [
                      "/internal/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/backendServices/private-backend",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "sukrit-singh-426716",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sukrit-singh-426716/global/urlMaps/url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.private_backend",
            "google_compute_backend_service.public_backend"
          ]
        }
      ]
    }
  ]
}